--- a/vmd.midp/src/org/netbeans/modules/vmd/midp/propertyeditors/DatabindingElementUI.form
+++ b/vmd.midp/src/org/netbeans/modules/vmd/midp/propertyeditors/DatabindingElementUI.form
@@ -75,23 +75,33 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="1" attributes="0">
+                  <Group type="102" alignment="0" attributes="0">
+                      <Component id="jLabelWarning" pref="304" max="32767" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jLabel2" linkSize="1" alignment="0" min="-2" max="-2" attributes="1"/>
                           <Component id="jLabel1" linkSize="1" alignment="0" min="-2" max="-2" attributes="1"/>
-                          <Component id="jLabel3" linkSize="1" min="-2" max="-2" attributes="1"/>
+                          <Component id="jLabel2" linkSize="1" min="-2" max="-2" attributes="1"/>
+                          <Component id="jLabel3" linkSize="1" alignment="0" min="-2" max="-2" attributes="1"/>
                           <Component id="jLabel4" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jLabelReadOnly" alignment="1" pref="234" max="32767" attributes="0"/>
-                          <Component id="jComboBoxIndexNames" alignment="0" pref="234" max="32767" attributes="1"/>
-                          <Component id="jTextFieldExpressionRead" alignment="0" pref="234" max="32767" attributes="3"/>
-                          <Component id="jComboBoxDatasets" alignment="0" pref="234" max="32767" attributes="3"/>
+                          <Group type="102" attributes="0">
+                              <Component id="jLabelReadOnly" max="32767" attributes="0"/>
+                              <EmptySpace min="-2" pref="170" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="jComboBoxDatasets" alignment="0" pref="232" max="32767" attributes="3"/>
+                                  <Component id="jComboBoxIndexNames" alignment="0" pref="232" max="32767" attributes="1"/>
+                                  <Component id="jTextFieldExpressionRead" alignment="0" pref="232" max="32767" attributes="3"/>
+                              </Group>
+                              <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
-                      <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="jLabelWarning" alignment="0" pref="322" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
@@ -101,15 +111,15 @@
                           <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jComboBoxDatasets" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
+                      <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jComboBoxIndexNames" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jTextFieldExpressionRead" alignment="3" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jComboBoxIndexNames" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
@@ -256,7 +266,10 @@
                               </Group>
                           </Group>
                       </Group>
-                      <Component id="jLabelWarning2" alignment="0" pref="331" max="32767" attributes="0"/>
+                      <Group type="102" alignment="0" attributes="0">
+                          <Component id="jLabelWarning2" pref="311" max="32767" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                      </Group>
                   </Group>
                 </DimensionLayout>
                 <DimensionLayout dim="1">
