--- a/web.client.tools.impl/src/org/netbeans/modules/web/client/javascript/debugger/http/ui/HttpMonitorTopComponent.form
+++ b/web.client.tools.impl/src/org/netbeans/modules/web/client/javascript/debugger/http/ui/HttpMonitorTopComponent.form
@@ -102,6 +102,12 @@
                           <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
                           <SubComponents>
                             <Container class="javax.swing.JScrollPane" name="jScrollPane5">
+                              <Properties>
+                                <Property name="autoscrolls" type="boolean" value="true"/>
+                                <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                                  <Dimension value="null"/>
+                                </Property>
+                              </Properties>
                               <AuxValues>
                                 <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
                               </AuxValues>
